--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.DetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.SubcategoryActivity"
             android:exported="false" />
         <activity
             android:name=".activities.CategoryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.CategoriesActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SignupActivity"
