--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.OrderConfirmedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CheckoutSummaryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CartActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DetailsActivity"
             android:exported="false" />
         <activity
